--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Personal portfolio website for Alixandra Acker - AI Ethics Expert",
   "main": "index.js",
+  "homepage": "https://alinacker.github.io/alixandraacker",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf docs && mkdir -p docs && cp -R build/* docs/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
